static/styles/zulip.css
/* ... */
.bookend_tr + .summary_row {
    .message_header {
        border-top-right-radius: 3px;
    }

    .summary_colorblock {
        border-top-left-radius: 3px;
    }
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0;
}

.summary_row_private_message .summary_colorblock {
    background-color: hsl(0, 0%, 0%);
}

.messages-expand,
.messages-collapse {
    cursor: pointer;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(359deg);
    }
}

@keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0);
    }
}

.message_header_private_message {
    .message_label_clickable {
        background-color: hsl(0, 0%, 27%);
        display: inline-block;
        padding: 3px 6px 2px 6px;
        font-weight: normal;
        font-size: 14px;
        height: 17px;
        line-height: 17px;
        border-left-color: hsl(0, 0%, 27%);
    }

    /* Base color backgrounds for messageboxes,
       private messages, mentions, and unread messages */

    .message-header-contents {
        background-color: hsla(192, 19%, 75%, 0.2);
        box-shadow: inset 1px 1px 0 hsl(0, 0%, 88%);
    }
}

.private-message {
    .alert-msg {
        background-color: hsl(192, 20%, 95%);
    }

    .messagebox,
    .date_row {
        background-color: hsla(192, 19%, 75%, 0.2);
        box-shadow: inset 2px 0 0 0 hsl(0, 0%, 27%), -1px 0 0 0 hsl(0, 0%, 27%);
    }
}

.message-header-contents {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-right: 1px solid hsl(0, 0%, 88%);
    background-color: hsl(0, 0%, 88%);
}

.mention .messagebox {
    background-color: hsl(8, 94%, 94%);
}

.recipient_row .message_row:first-child .unread_marker {
    top: 0;
}

.unread_marker {
    display: block;
    position: absolute;
    left: 2px;
    top: 0;
    opacity: 0;
    z-index: 1;
    bottom: 1px;
    transition: all 0.3s ease-out;

    &.slow_fade {
        transition: all 2s ease-out;
    }

    &.fast_fade {
        transition: all 0.3s ease-out;
    }
}

.unread-marker-fill {
    background-color: hsl(107, 74%, 29%);
    width: 3px;
    height: 100%;
}

.last_message {
    .unread_marker {
        bottom: 0;
    }

    .messagebox-content {
        padding-bottom: 1px;
    }
}

.unread .unread_marker {
    transition: all 0.3s ease-out;
    opacity: 1;
}

.selected_message {
    .messagebox {
        z-index: 1;
    }

    .messagebox-content {
        box-shadow: inset 0 0 0 2px hsl(215, 47%, 50%),
            -1px -1px 0 0 hsl(215, 47%, 50%), 1px 1px 0 0 hsl(215, 47%, 50%),
            -1px 1px 0 0 hsl(215, 47%, 50%), 1px -1px 0 0 hsl(215, 47%, 50%);
    }
}

.message_sender {
    height: 0;
    vertical-align: top;
    position: relative;

    i.zulip-icon.bot {
        font-size: 12px;
    }
}

.sender_name {
    display: inline-block;
    font-weight: 700;
    vertical-align: top;
    line-height: 12px;
    font-size: 14px;
    margin-left: -3px;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered {
    .sender_name,
    .sender_name-in-status {
        color: hsl(200, 100%, 40%);
    }
}

.popover_info i.zulip-icon.bot {
    margin-top: 3px;
}

.actions_hover:hover {
    color: hsl(200, 100%, 40%);
}

.on_hover_topic_edit,
.on_hover_topic_mute,
.on_hover_topic_read {
    opacity: 0.2;
}

.always_visible_topic_edit {
    opacity: 0.7;
}

.on_hover_topic_edit,
.always_visible_topic_edit,
.on_hover_topic_mute,
.on_hover_topic_unmute,
.on_hover_topic_read {
    &:hover {
        cursor: pointer;
        opacity: 1;
    }
}

.edit_content {
    width: 12px;
    display: inline-block;
    position: relative;
    color: hsl(0, 0%, 73%);

    &:hover {
        cursor: pointer;
        color: hsl(200, 100%, 40%);
    }
}

.has_actions_popover .info {
    opacity: 1;
    visibility: visible;
}

/* Brighten text because of the dark background */
.dark_background a,
.dark_background a:hover,
a.dark_background:hover,
.dark_background {
    color: hsl(0, 0%, 100%) !important;
}

.dark_background a.message_label_clickable:hover {
    color: hsl(200, 99%, 60%);
}

.message_top_line {
    position: relative;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.actions_hovered {
    .message_time,
    .info {
        color: hsl(200, 100%, 40%);
        cursor: pointer;
    }

    .actions_link {
        text-decoration: underline;
    }
}

.info {
    display: inline-block;
    position: relative;
    font-size: 14px;
    color: hsl(0, 0%, 73%);
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid hsla(0, 0%, 0%, 0.1);
    border-right: 1px solid hsla(0, 0%, 0%, 0.1);

    &.selected_message {
        z-index: 2;
    }

    .date_row {
        /* We only want padding for the date rows between recipient blocks */
        padding-bottom: 0;
    }
}

div.focused_table {
    display: block;
}

.message_content {
    line-height: 1.214;
    min-height: 17px;
    font-size: 14px;
    margin-left: 46px;
    display: block;
    position: relative;
    overflow: hidden;

    &:empty {
        display: none;
    }

    &.condensed {
        max-height: 8.5em;
        min-height: 0;
        overflow: hidden;
    }

    &.collapsed {
        max-height: 0;
        min-height: 0;
        overflow: hidden;
    }
}

.rtl {
    direction: rtl;
}

.message_edit_content {
    line-height: 18px;
    resize: vertical !important;
    max-height: 24em;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: hsl(0, 0%, 63%);
}
/* ... */

